# ahmeds-testing

./: .gitignore  README.md  install.sh  requirements.txt  setup.cfg
app/: __main__.py  commands.py  config.py  main.py  utils.py
app/services/: __init__.py  base.py  bitcoinrewards.py  go_to_website.py  pw.py
botpark/: __main__.py  commands.py  config.py  defaults.py  main.py  utils.py
botpark/services/: __init__.py  base.py  bitcoinrewards.py  go_to_website.py  goto_website.py  pw.py
