[metadata]
name = ahmeds-testing
version = 0.1.0
author = Ivan K.
author_email = fishsouprecipe@gmail.com

[options]
install_requires =
    aiofiles==0.7.0
    telethon==1.21.1
    playwright==1.11.2
    appdirs==1.4.4
packages = find:

[options.entry_points]
console_scripts =
    botpark = botpark.main:main
